Bug 100571 - audio crackles on Dell Latitude E7450
Summary: audio crackles on Dell Latitude E7450
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-27 13:34 UTC by noga.dany
Modified: 2015-06-29 08:59 UTC (History)
1 user (show)

See Also:
Kernel Version: 4.1
Subsystem:
Regression: No
Bisected commit-id:


Attachments
output from alsa-info.sh (43.90 KB, application/octet-stream)
2015-06-27 18:10 UTC, noga.dany
Details

Description noga.dany 2015-06-27 13:34:12 UTC
Looks similar to fixed bug on 4.1 final:

Takashi Iwai (3):
      ALSA: hda - Fix audio crackles on Dell Latitude E7x40


But with final 4.1 release persists on Dell Latitude E7450
Comment 1 Takashi Iwai 2015-06-27 14:37:30 UTC
Please give alsa-info.sh output on the machine.  Run the script with --no-upload option and attach to bugzilla.
Comment 2 noga.dany 2015-06-27 18:10:00 UTC
Created attachment 181101 [details]
output from alsa-info.sh
Comment 3 Takashi Iwai 2015-06-29 08:59:11 UTC
OK, I added the fixup for your device (1028:062e) now.  It'll be backported to 4.1 stable kernel later.  Thanks.

Note You need to log in before you can comment on or make changes to this bug.