patch_realtek.c
@@ -28597,6 +28597,19 @@ c_func
 (paren
 l_int|0x1028
 comma
+l_int|0x062e
+comma
+l_string|&quot;Dell Latitude E7450&quot;
+comma
+id|ALC292_FIXUP_DELL_E7X
+)paren
+comma
+"&t;"
+id|SND_PCI_QUIRK
+c_func
+(paren
+l_int|0x1028
+comma
 l_int|0x0638
 comma
 l_string|&quot;Dell Inspiron 5439&quot;
